fixed image not showing in chrome/safari
position:relative;

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ margin-left: auto;
 margin-right: auto;
 width: 250px;
 transition: 0.5s ease-in-out;
+position: relative;
 }
 #video-background {
 visibility: hidden;
